--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
+build/
+.idea/
+.gradle/
 # Compiled class file
 *.class
 
 # Log file
 *.log
-
-# BlueJ files
-*.ctxt
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
